Fixed IP column truncate.

--- a/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
+++ b/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
@@ -37,11 +37,6 @@
                 overflow: visible;
             }
             .truncate { white-space: nowrap; }
-            .html-content {
-                position: relative;
-                display: block;
-                overflow: hidden;
-            }
             .additional {
                 color: var(--dark-secondary-text-color);
                 font-size: 11px;
